@startuml
class Pizza{
prepare():void
bake():void
cut():void
box():void
}

class OrderPizza
class OrderPizza2
class CheesePizza
class GreekPizza
class PepperPizza
class SimpleFactory

Pizza <|-- CheesePizza
Pizza <|-- GreekPizza
Pizza <|-- PepperPizza
SimpleFactory ..o OrderPizza
SimpleFactory ..o OrderPizza2
SimpleFactory ..o Pizza

@enduml